TripleO newton release
Change-Id: I7461cf66d17d90a088c1186f9fb5fe2cde54710f

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -75,6 +75,10 @@ releases:
       - hash: 6842a3cdc6c7ef625316696b538dd7d75ec088c0
         repo: openstack/instack-undercloud
     version: 5.3.7
+  - projects:
+      - hash: 2046b2eab1f0267163c2d8a4215e2244bf9506f6
+        repo: openstack/instack-undercloud
+    version: 5.3.8
 team: tripleo
 type: other
 repository-settings:
