--- a/deliverables/newton/os-net-config.yaml
+++ b/deliverables/newton/os-net-config.yaml
@@ -47,6 +47,10 @@ releases:
       - hash: 2c7c5e66a7a7393745d67e46de23e69c0f2d4733
         repo: openstack/os-net-config
     version: 5.2.3
+  - projects:
+      - hash: 91e3ac46ef7976a06c8cc6572ef6591f0e733f16
+        repo: openstack/os-net-config
+    version: 5.2.4
 team: tripleo
 type: other
 repository-settings:
