--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -77,6 +77,10 @@ releases:
       - hash: fbab9255944d1dac59fd9e1f271f69b24fd90cf1
         repo: openstack/puppet-tripleo
     version: 5.6.8
+  - projects:
+      - hash: 7edc5a5e682ad5b4c44fa3d9361258059fe71c59
+        repo: openstack/puppet-tripleo
+    version: 5.6.9
 team: tripleo
 type: other
 repository-settings:
