--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -87,6 +87,10 @@ releases:
       - hash: afa48621358599100cfeeab6b3008ee71a16d444
         repo: openstack/tripleo-heat-templates
     version: 5.3.10
+  - projects:
+      - hash: b2161d7fe8a9e26fd2f4bc1be74c1f3080cf770b
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.11
 team: tripleo
 type: other
 repository-settings:
