TripleO ocata release
Change-Id: Idad9cc6026358469c061b70c92141fdce9d5ca93

--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -48,6 +48,10 @@ releases:
       - hash: aeac66c9ec7413f6cc80e045046ae82598d168e5
         repo: openstack/instack-undercloud
     version: 6.1.5
+  - projects:
+      - hash: a32574baa5731efab03da9a14458b944e313fd20
+        repo: openstack/instack-undercloud
+    version: 6.1.6
 team: tripleo
 type: other
 repository-settings:
