--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -70,6 +70,10 @@ releases:
       - hash: 09a5b3171554e5b0e55548e12d10c9d7077bd014
         repo: openstack/puppet-tripleo
     version: 6.5.10
+  - projects:
+      - hash: ca6911ad27d464fd4b560aeb18d9d7a5fdfda4c1
+        repo: openstack/puppet-tripleo
+    version: 6.5.11
 team: tripleo
 type: other
 repository-settings:
