--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -80,6 +80,10 @@ releases:
       - hash: 298599d9331365d93e4cba907ea6b8c8df722249
         repo: openstack/tripleo-heat-templates
     version: 6.2.11
+  - projects:
+      - hash: 0069100526a2f9468d0deec5d2799476e2279c58
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.12
 team: tripleo
 type: other
 repository-settings:
