TripleO pike release
Change-Id: I4ba5e006f3f00dabff268eff98a384c5a2863bff

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -70,6 +70,10 @@ releases:
       - hash: 50217d7a93dce7fdc17c0dfbb04260f86fd3ac7d
         repo: openstack/instack-undercloud
     version: 7.4.10
+  - projects:
+      - hash: c95254293b8068057c42ddae8b45eadec87c5f70
+        repo: openstack/instack-undercloud
+    version: 7.4.11
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/instack-undercloud/pike.html
