--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -65,6 +65,10 @@ releases:
       - hash: a7e36942c6447709349e4bc5c35292a728dd4fcb
         repo: openstack/puppet-tripleo
     version: 7.4.10
+  - projects:
+      - hash: b87c69281b0e1e8983a49e93bfcc3231bab8e4b3
+        repo: openstack/puppet-tripleo
+    version: 7.4.11
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
