--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -78,6 +78,10 @@ releases:
       - hash: ab9faf954343680595c0942a34e45e135cf54808
         repo: openstack/tripleo-common
     version: 7.6.10
+  - projects:
+      - hash: d044d1e8c49a12d6f6d38ba34dd872a6c39e7294
+        repo: openstack/tripleo-common
+    version: 7.6.11
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
