--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -71,6 +71,10 @@ releases:
       - hash: cf39b68506762eaafa57a515bb397c41105ac7d3
         repo: openstack/tripleo-heat-templates
     version: 7.0.10
+  - projects:
+      - hash: fb82009d62c903f92f0cf287c01b5406c5d7da37
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.11
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
