--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -55,6 +55,10 @@ releases:
       - hash: 246581fb40e92410b73a5ecde421e3f505691954
         repo: openstack/tripleo-puppet-elements
     version: 7.0.6
+  - projects:
+      - hash: 1ab281355bc10f3b64ee0841ae8eaccf3aa6696e
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.7
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-puppet-elements/pike.html
