--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -54,6 +54,10 @@ releases:
       - hash: 602fb5f1a3cc0c922d32d4edd7e9cca0460fee72
         repo: openstack/tripleo-validations
     version: 7.4.7
+  - projects:
+      - hash: bc5452a00dfe3af1656195d1a23d2aacac707d08
+        repo: openstack/tripleo-validations
+    version: 7.4.8
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-validations/pike.html
