TripleO queens release
Change-Id: Ic0bc4faf230c78ccddb3900c45fb6f16a09ad885

--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 6ad29d2330a65d158b7ec591c2d8ffdcaaa1ff48
         repo: openstack/instack-undercloud
     version: 8.3.0
+  - projects:
+      - hash: e3142ba2860c7b1c76146f331679a6bf4879a1d1
+        repo: openstack/instack-undercloud
+    version: 8.4.0
 repository-settings:
   openstack/instack-undercloud: {}
 branches:
