--- a/deliverables/queens/os-net-config.yaml
+++ b/deliverables/queens/os-net-config.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 108941640d74268eb932386e32f7e6df40c74180
         repo: openstack/os-net-config
     version: 8.3.0
+  - projects:
+      - hash: e699c687aaed82b4750d5a8b9fe5e033f846e102
+        repo: openstack/os-net-config
+    version: 8.4.0
 repository-settings:
   openstack/os-net-config: {}
 branches:
