--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: b3d0b2f25a120501e1dafa9e0c289bc5630dbc29
         repo: openstack/puppet-tripleo
     version: 8.3.0
+  - projects:
+      - hash: 0e61fab9cdaaee67a15c4cd105689402a837f37a
+        repo: openstack/puppet-tripleo
+    version: 8.3.1
 repository-settings:
   openstack/puppet-tripleo: {}
 branches:
