--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 14857e2902e24842d441e3d26c61143ce0d5b9de
         repo: openstack/tripleo-common
     version: 8.5.0
+  - projects:
+      - hash: 91f52e9fef4c1c7bcaa17ec6fe5d6f499229667a
+        repo: openstack/tripleo-common
+    version: 8.6.0
 cycle-highlights:
   - |
     config-download: Ability to use Ansible to apply the cloud configuration.
