--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: f093c3c790a4a3625a94d62402f042d6e1488731
         repo: openstack/tripleo-heat-templates
     version: 8.0.0
+  - projects:
+      - hash: 281926767677f1c1282528e6a365ad0a7fc8dc26
+        repo: openstack/tripleo-heat-templates
+    version: 9.0.0.0b1
 repository-settings:
   openstack/tripleo-heat-templates: {}
 branches:
