--- a/deliverables/queens/paunch.yaml
+++ b/deliverables/queens/paunch.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: b533f8f5ac4305424274496d695d23e24ee6859f
         repo: openstack/paunch
     version: 2.3.0
+  - projects:
+      - hash: 5697cbe9d946b6244f7e53f7c29e9c95ee4539b3
+        repo: openstack/paunch
+    version: 2.4.0
 repository-settings:
   openstack/paunch: {}
 release-notes: https://docs.openstack.org/releasenotes/paunch/queens.html
