--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: b1a0e2228ad3e1bc51c607453b6ec5cf941c90fe
         repo: openstack/python-tripleoclient
     version: 9.1.0
+  - projects:
+      - hash: 47f6550ce3129f873a2747c2f8fc3e0074f2042f
+        repo: openstack/python-tripleoclient
+    version: 9.2.0
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/queens.html
 repository-settings:
   openstack/python-tripleoclient: {}
