--- a/deliverables/queens/tripleo-ui.yaml
+++ b/deliverables/queens/tripleo-ui.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 2a5536ef93c9f714142bacf1bdf10731734a5bbe
         repo: openstack/tripleo-ui
     version: 8.3.0
+  - projects:
+      - hash: c39808274640244998b16e47f11d3bd84ab29a2a
+        repo: openstack/tripleo-ui
+    version: 8.3.1
 repository-settings:
   openstack/tripleo-ui: {}
 branches:
