--- a/deliverables/queens/tripleo-validations.yaml
+++ b/deliverables/queens/tripleo-validations.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 6dc1ba3c1fc6776a7232f0b6c949a7a7fa43b06f
         repo: openstack/tripleo-validations
     version: 8.3.0
+  - projects:
+      - hash: 0744e1b801300d962ea5d8524edf6357442cd3d7
+        repo: openstack/tripleo-validations
+    version: 8.4.0
 repository-settings:
   openstack/tripleo-validations: {}
 branches:
