--- a/deliverables/queens/kolla.yaml
+++ b/deliverables/queens/kolla.yaml
@@ -23,6 +23,11 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 01c6dfef2ab9ec3056b015627767ced7f1936aff
+  - diff-start: 5.0.0.0rc1
+    version: 6.0.0
+    projects:
+      - repo: openstack/kolla
+        hash: 01c6dfef2ab9ec3056b015627767ced7f1936aff
 cycle-highlights:
   - 'Upgrade to ceph luminous'
   - 'Add almanach, certmonger, ceph-nfs, ptp, rsyslog, sensu and tripleo ui image'
