Add Rocky TC Election Dates
This patch adds the dates to the Rocky release
calendar that were decided upon here [1].

[1]https://review.openstack.org/#/c/551404/

Story: 2001611
Task: 12049

Change-Id: Iaafe2e4e52b83c5f01a87a60cbcde0fc1c138875

--- a/doc/source/rocky/schedule.yaml
+++ b/doc/source/rocky/schedule.yaml
@@ -24,17 +24,23 @@ cycle:
   - end: '2018-04-13'
     name: R-20
     start: '2018-04-09'
+    x-project:
+      - r-tc-nominations
   - end: '2018-04-20'
     name: 'R-19'
     start: '2018-04-16'
     x-project:
       - r-1
+      - r-tc-email-deadline
+      - r-tc-campaigning
     project-specific:
       - r-manila-spec-freeze
       - r-keystone-spec-proposal-freeze
   - end: '2018-04-27'
     name: R-18
     start: '2018-04-23'
+    x-project:
+      - r-tc-polling
   - end: '2018-05-04'
     name: R-17
     start: '2018-04-30'
