--- a/deliverables/pike/kolla-ansible.yaml
+++ b/deliverables/pike/kolla-ansible.yaml
@@ -32,6 +32,10 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: a097d59a5ec5b637eb4a61307e58a5e04f3cb43e
+  - version: 5.0.2
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: 7a5cfbba2b01792a4e762a98d46e201bc7041798
 release-notes: https://docs.openstack.org/releasenotes/kolla-ansible/pike.html
 repository-settings:
   openstack/kolla-ansible: {}
