--- a/deliverables/pike/kolla.yaml
+++ b/deliverables/pike/kolla.yaml
@@ -32,6 +32,10 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 5bae59ba945d20b1a75b086379d1f40f08b44196
+  - version: 5.0.2
+    projects:
+      - repo: openstack/kolla
+        hash: 04f7b6126c13f5211b2939f88599316b18ce5f55
 release-notes: https://docs.openstack.org/releasenotes/kolla/pike.html
 repository-settings:
   openstack/kolla: {}
