Oslo releases for 2018-3-27
pbr, oslo.config, and oslo.messaging had removals that require
major releases.

Change-Id: I3666f776f9a9f69e7252aa164541ab4ff21b0af6

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -72,5 +72,9 @@ releases:
     projects:
       - repo: openstack-dev/pbr
         hash: d43badb6c1a9cf776a0899cae964966f6ccd07de
+  - projects:
+      - hash: 1f2c7314853d254c58f3adf7f03ca80589cb6f36
+        repo: openstack-dev/pbr
+    version: 4.0.0
 repository-settings:
   openstack-dev/pbr: {}
