--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 31fbe5bf5941c52aa8d86a8d2603adecc688e5e4
         repo: openstack/oslo.messaging
     version: 5.36.0
+  - projects:
+      - hash: 222a939361579f73fb33a51580fd2ed4d28decb3
+        repo: openstack/oslo.messaging
+    version: 6.0.0
