--- a/deliverables/rocky/oslotest.yaml
+++ b/deliverables/rocky/oslotest.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 098d25786350ca39aa634b3152ef6635160d9934
         repo: openstack/oslotest
     version: 3.3.0
+  - projects:
+      - hash: 9460095d7dabf6c6e1faa0565cf816f4d785ac69
+        repo: openstack/oslotest
+    version: 3.4.0
