queens: release 8.0.1 for tripleo THT
9.0.0.0b1 was pushed by error, and in fact we want 8.0.1.
A note was added for Rocky so we know that we need to push higher than
9.0.0.0b1 for rocky-m1.

Change-Id: Ib849fa1552c0d0ee76075197e9aca90d1deea1bb

--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -30,6 +30,10 @@ releases:
       - hash: 281926767677f1c1282528e6a365ad0a7fc8dc26
         repo: openstack/tripleo-heat-templates
     version: 9.0.0.0b1
+  - projects:
+      - hash: 48a4e12565ee0e65e29d8576e2a1ffc1359e8483
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.1
 repository-settings:
   openstack/tripleo-heat-templates: {}
 branches:
