--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: fb3f71806174bc2fae7e421268aeee61be36412d
         repo: openstack/neutron
     version: 12.0.0
+  - projects:
+      - hash: 68b89806a963f7f187e6787b6fc111f4845c2863
+        repo: openstack/neutron
+    version: 12.0.1
 repository-settings:
   openstack/neutron: {}
 branches:
