Add feature/policy-refactor branch to glance repo
The policy refactoring work will be significant effort touching many
internals of glance codebase. Creating feature branch so we can ensure
that the changes are stable and safe before committing to release them.
This will allow us to conduct the work on smaller increments that are
easier to digest.

Change-Id: I478c37eacb701e97390f376226db203b4bf3d1c6

--- a/deliverables/rocky/glance.yaml
+++ b/deliverables/rocky/glance.yaml
@@ -5,5 +5,9 @@ launchpad: glance
 release-model: cycle-with-milestones
 team: glance
 type: service
+branches:
+  - name: feature/policy-refactor
+    location:
+      openstack/glance: ca51cb84650da93c52a26b2581f0582f0a280c11
 repository-settings:
   openstack/glance: {}
