--- a/deliverables/queens/puppet-aodh.yaml
+++ b/deliverables/queens/puppet-aodh.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: ea7ba6cd9aa9ea545e2f114c0f66663eeeb992a9
         repo: openstack/puppet-aodh
     version: 12.3.0
+  - projects:
+      - hash: 8b519d29144c4eff2ba99114edb7b57b176963c0
+        repo: openstack/puppet-aodh
+    version: 12.4.0
 repository-settings:
   openstack/puppet-aodh: {}
 branches:
