--- a/deliverables/queens/puppet-barbican.yaml
+++ b/deliverables/queens/puppet-barbican.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 3b5a50a6061a76c0564411db0bc4a979038b11a1
         repo: openstack/puppet-barbican
     version: 12.3.0
+  - projects:
+      - hash: c9a95fd85754f10268262fd7ca4b62c77c166686
+        repo: openstack/puppet-barbican
+    version: 12.4.0
 repository-settings:
   openstack/puppet-barbican: {}
 branches:
