--- a/deliverables/queens/puppet-ceilometer.yaml
+++ b/deliverables/queens/puppet-ceilometer.yaml
@@ -28,6 +28,10 @@ releases:
       - hash: 68d19f8d8fecde20fa40b90729a556f74a6ca310
         repo: openstack/puppet-ceilometer
     version: 12.4.1
+  - projects:
+      - hash: 58f886ce3ecb87b4110d7ce2e77bece9f71c37d6
+        repo: openstack/puppet-ceilometer
+    version: 12.5.0
 repository-settings:
   openstack/puppet-ceilometer: {}
 branches:
