--- a/deliverables/queens/puppet-cinder.yaml
+++ b/deliverables/queens/puppet-cinder.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 0b2d64598e5ac4d730e74e4b5bc646b7550be0a2
         repo: openstack/puppet-cinder
     version: 12.3.0
+  - projects:
+      - hash: b5a3493d0b94d4320d9ecb6eb142e55d866b2841
+        repo: openstack/puppet-cinder
+    version: 12.4.0
 repository-settings:
   openstack/puppet-cinder: {}
 branches:
