--- a/deliverables/queens/puppet-congress.yaml
+++ b/deliverables/queens/puppet-congress.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 581da6cf4f3e59d08afc33763b61c80f3f50f166
         repo: openstack/puppet-congress
     version: 12.3.0
+  - projects:
+      - hash: 31b00f3a1bd2badd18ef3c9e7f54d41e0f56445f
+        repo: openstack/puppet-congress
+    version: 12.4.0
 repository-settings:
   openstack/puppet-congress: {}
 branches:
