--- a/deliverables/queens/puppet-designate.yaml
+++ b/deliverables/queens/puppet-designate.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: bce868fbb5499414ceb45b09fdbb18d13306f3eb
         repo: openstack/puppet-designate
     version: 12.3.0
+  - projects:
+      - hash: 84870ddc3fdacd255025d13f738872ba729d9a4f
+        repo: openstack/puppet-designate
+    version: 12.4.0
 repository-settings:
   openstack/puppet-designate: {}
 branches:
