--- a/deliverables/queens/puppet-glance.yaml
+++ b/deliverables/queens/puppet-glance.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: 2bf53faf1e30a0312e422680f031f9abaa7270d1
         repo: openstack/puppet-glance
     version: 12.4.0
+  - projects:
+      - hash: e5a1256d33a780a6b99bf9cec28a9fbc1a1dc246
+        repo: openstack/puppet-glance
+    version: 12.5.0
 repository-settings:
   openstack/puppet-glance: {}
 branches:
