--- a/deliverables/queens/puppet-gnocchi.yaml
+++ b/deliverables/queens/puppet-gnocchi.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: b084a6fb0382057e949e3f5a0f43a23d7e02d19d
         repo: openstack/puppet-gnocchi
     version: 12.3.0
+  - projects:
+      - hash: 5dfa350b7ef005f8d31d2b9c5ffdd4715c8f989e
+        repo: openstack/puppet-gnocchi
+    version: 12.4.0
 repository-settings:
   openstack/puppet-gnocchi: {}
 branches:
