--- a/deliverables/queens/puppet-heat.yaml
+++ b/deliverables/queens/puppet-heat.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: cde67e96cc673c040f9318ce461ab99978010538
         repo: openstack/puppet-heat
     version: 12.3.0
+  - projects:
+      - hash: 6577c1da4088d2fe31aa9f0214c73e235cf5e59e
+        repo: openstack/puppet-heat
+    version: 12.4.0
 repository-settings:
   openstack/puppet-heat: {}
 branches:
