--- a/deliverables/queens/puppet-horizon.yaml
+++ b/deliverables/queens/puppet-horizon.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 6c4d7ac998518cdbcb8d579dd35b569412718574
         repo: openstack/puppet-horizon
     version: 12.3.0
+  - projects:
+      - hash: 64559b87cece585a92852d7b213f7c44f38dfb28
+        repo: openstack/puppet-horizon
+    version: 12.4.0
 repository-settings:
   openstack/puppet-horizon: {}
 branches:
