--- a/deliverables/queens/puppet-ironic.yaml
+++ b/deliverables/queens/puppet-ironic.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 0a36e13e8d65cd533a228cb042ce15c1e344f26e
         repo: openstack/puppet-ironic
     version: 12.3.0
+  - projects:
+      - hash: 8285d85bbf2c324ede9ab89bb4f069f407db6612
+        repo: openstack/puppet-ironic
+    version: 12.4.0
 repository-settings:
   openstack/puppet-ironic: {}
 branches:
