--- a/deliverables/queens/puppet-manila.yaml
+++ b/deliverables/queens/puppet-manila.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 129c7398599621207ab92126399199c859d5b15a
         repo: openstack/puppet-manila
     version: 12.3.0
+  - projects:
+      - hash: 6c18418b1381acab91b449510253fdacdfbb33a7
+        repo: openstack/puppet-manila
+    version: 12.4.0
 repository-settings:
   openstack/puppet-manila: {}
 branches:
