--- a/deliverables/queens/puppet-mistral.yaml
+++ b/deliverables/queens/puppet-mistral.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 9bc1b605781054a19ce2252636188d51837d64e6
         repo: openstack/puppet-mistral
     version: 12.3.0
+  - projects:
+      - hash: ab885c40966396877e2650c146b78ca66924783a
+        repo: openstack/puppet-mistral
+    version: 12.4.0
 repository-settings:
   openstack/puppet-mistral: {}
 branches:
