--- a/deliverables/queens/puppet-murano.yaml
+++ b/deliverables/queens/puppet-murano.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: a03722c22564feed1237c2a808cc2fe67751e918
         repo: openstack/puppet-murano
     version: 12.3.0
+  - projects:
+      - hash: 29565d2c3f0277f5fe8b22e0a25a4879baaebdc7
+        repo: openstack/puppet-murano
+    version: 12.4.0
 repository-settings:
   openstack/puppet-murano: {}
 branches:
