--- a/deliverables/queens/puppet-neutron.yaml
+++ b/deliverables/queens/puppet-neutron.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 3309f1fef79935c7b1a60e0d8d6fa6be27dcf5e9
         repo: openstack/puppet-neutron
     version: 12.3.0
+  - projects:
+      - hash: 502d290516370841eb73b46fe3176af3a9662228
+        repo: openstack/puppet-neutron
+    version: 12.4.0
 repository-settings:
   openstack/puppet-neutron: {}
 branches:
