--- a/deliverables/queens/puppet-octavia.yaml
+++ b/deliverables/queens/puppet-octavia.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: c0cb342c70b664126c419c9264626a4fe1667162
         repo: openstack/puppet-octavia
     version: 12.3.0
+  - projects:
+      - hash: 3bc0f6b33937d65ee65f002974d925425891612f
+        repo: openstack/puppet-octavia
+    version: 12.4.0
 repository-settings:
   openstack/puppet-octavia: {}
 branches:
