--- a/deliverables/queens/puppet-openstack_extras.yaml
+++ b/deliverables/queens/puppet-openstack_extras.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 39928eda7fb64447feb581aab4f21fe8da5a6fa8
         repo: openstack/puppet-openstack_extras
     version: 12.3.0
+  - projects:
+      - hash: 4393da97661ec4c2b6fe8bb41c5e7784e828ce0c
+        repo: openstack/puppet-openstack_extras
+    version: 12.4.0
 repository-settings:
   openstack/puppet-openstack_extras: {}
 branches:
