--- a/deliverables/queens/puppet-openstacklib.yaml
+++ b/deliverables/queens/puppet-openstacklib.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: a371dcdc2e8f47af0848edc9baad69246dd944dc
         repo: openstack/puppet-openstacklib
     version: 12.3.0
+  - projects:
+      - hash: 4b30e6f02388ad2f551c10469893f1bd882ec5bd
+        repo: openstack/puppet-openstacklib
+    version: 12.4.0
 repository-settings:
   openstack/puppet-openstacklib: {}
 branches:
