--- a/deliverables/queens/puppet-oslo.yaml
+++ b/deliverables/queens/puppet-oslo.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: e19c7ddc137950c92abeb480672bf480245e27eb
         repo: openstack/puppet-oslo
     version: 12.3.0
+  - projects:
+      - hash: 2259336c85029f753400df31a2fc6a8645b190a5
+        repo: openstack/puppet-oslo
+    version: 12.4.0
 repository-settings:
   openstack/puppet-oslo: {}
 branches:
