--- a/deliverables/queens/puppet-ovn.yaml
+++ b/deliverables/queens/puppet-ovn.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 386fef1a469b6c0f5775d6b2b1ea926eb4d30304
         repo: openstack/puppet-ovn
     version: 12.3.0
+  - projects:
+      - hash: 36ff21904dc61202b4b6c4819dc1758bfc50c9d8
+        repo: openstack/puppet-ovn
+    version: 12.4.0
 repository-settings:
   openstack/puppet-ovn: {}
 branches:
