--- a/deliverables/queens/puppet-panko.yaml
+++ b/deliverables/queens/puppet-panko.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 179bf963f2f032ef54c5f9566fd06e38befb57ae
         repo: openstack/puppet-panko
     version: 12.3.0
+  - projects:
+      - hash: 7641dbec7dc20d17fad8d48a2aea5f7c28aaeb2a
+        repo: openstack/puppet-panko
+    version: 12.4.0
 repository-settings:
   openstack/puppet-panko: {}
 branches:
