--- a/deliverables/queens/puppet-sahara.yaml
+++ b/deliverables/queens/puppet-sahara.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: ce8b22988042a446ab2974372b29e10bfeb472f3
         repo: openstack/puppet-sahara
     version: 12.3.0
+  - projects:
+      - hash: 42162c3b0df03c4ec07a625e555277951a13f8a4
+        repo: openstack/puppet-sahara
+    version: 12.4.0
 repository-settings:
   openstack/puppet-sahara: {}
 branches:
