--- a/deliverables/queens/puppet-swift.yaml
+++ b/deliverables/queens/puppet-swift.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: d981ea9dea38ee0417c07d198e33339677ec346e
         repo: openstack/puppet-swift
     version: 12.3.0
+  - projects:
+      - hash: 1a67002f7452d71e6ad509b77917f70f9ad9ab41
+        repo: openstack/puppet-swift
+    version: 12.4.0
 repository-settings:
   openstack/puppet-swift: {}
 branches:
