--- a/deliverables/queens/puppet-tacker.yaml
+++ b/deliverables/queens/puppet-tacker.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: bdf5d33bba19b50c6f614f6eb155dbb7a23cfaba
         repo: openstack/puppet-tacker
     version: 12.3.0
+  - projects:
+      - hash: 1af925a8b56ad4d194198047df4c4ee67c23ddbb
+        repo: openstack/puppet-tacker
+    version: 12.4.0
 repository-settings:
   openstack/puppet-tacker: {}
 branches:
