--- a/deliverables/queens/puppet-tempest.yaml
+++ b/deliverables/queens/puppet-tempest.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: c0d16d4999464771495e629ef897b64a663ba3c9
         repo: openstack/puppet-tempest
     version: 12.4.0
+  - projects:
+      - hash: 8a17e07d4127f90927be95cee3a289c15003345f
+        repo: openstack/puppet-tempest
+    version: 12.5.0
 repository-settings:
   openstack/puppet-tempest: {}
 branches:
