--- a/deliverables/queens/puppet-trove.yaml
+++ b/deliverables/queens/puppet-trove.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 7abbf2147284b2978b7d283707a706b4075d7c47
         repo: openstack/puppet-trove
     version: 12.3.0
+  - projects:
+      - hash: e7bfdc942e9659eae6335f27f22ec8d12b699617
+        repo: openstack/puppet-trove
+    version: 12.4.0
 repository-settings:
   openstack/puppet-trove: {}
 branches:
