--- a/deliverables/queens/puppet-vswitch.yaml
+++ b/deliverables/queens/puppet-vswitch.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 7f7f588a06130d966b1e0b8cea8de10121d112fd
         repo: openstack/puppet-vswitch
     version: 8.3.0
+  - projects:
+      - hash: fd94e91c16b492bf2c545dde507a5c8fc38a5918
+        repo: openstack/puppet-vswitch
+    version: 8.4.0
 repository-settings:
   openstack/puppet-vswitch: {}
 branches:
