--- a/deliverables/queens/puppet-watcher.yaml
+++ b/deliverables/queens/puppet-watcher.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 9ae0dabe6bbb42f89d50901e1bb8e7b329d1b8b4
         repo: openstack/puppet-watcher
     version: 12.3.0
+  - projects:
+      - hash: af2e20b81d1938b2a6e5d4a8d3c444526e3e0aeb
+        repo: openstack/puppet-watcher
+    version: 12.4.0
 repository-settings:
   openstack/puppet-watcher: {}
 branches:
