--- a/deliverables/queens/puppet-ec2api.yaml
+++ b/deliverables/queens/puppet-ec2api.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: e161565a019b6929ed037bb2007aaa47ab2c2126
         repo: openstack/puppet-ec2api
     version: 12.3.0
+  - projects:
+      - hash: 424f2589d7824debbcd6fe975c3e82f99241b327
+        repo: openstack/puppet-ec2api
+    version: 12.4.0
 repository-settings:
   openstack/puppet-ec2api: {}
 branches:
