--- a/deliverables/queens/puppet-keystone.yaml
+++ b/deliverables/queens/puppet-keystone.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 03a84a07db9f15180bb4a99a94bab0cc76a7dfb2
         repo: openstack/puppet-keystone
     version: 12.3.0
+  - projects:
+      - hash: b6d21977abebd4ecfcf45e2cfc9c5201fbefb46e
+        repo: openstack/puppet-keystone
+    version: 12.4.0
 repository-settings:
   openstack/puppet-keystone: {}
 branches:
