--- a/deliverables/queens/puppet-nova.yaml
+++ b/deliverables/queens/puppet-nova.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 6ddc6152fdb6093d926f303a2969d1aa9a4d3393
         repo: openstack/puppet-nova
     version: 12.3.0
+  - projects:
+      - hash: 9cf4dc77b1d17916a3ffdb1b446b71586fff9b78
+        repo: openstack/puppet-nova
+    version: 12.4.0
 repository-settings:
   openstack/puppet-nova: {}
 branches:
