--- a/deliverables/queens/puppet-vitrage.yaml
+++ b/deliverables/queens/puppet-vitrage.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 74bc6fc779b210ca3fb20ed1e70ed06b03659d9c
         repo: openstack/puppet-vitrage
     version: 2.3.0
+  - projects:
+      - hash: 212d76e19d8711b27f59aafd5070eda00ba3ce25
+        repo: openstack/puppet-vitrage
+    version: 2.4.0
 repository-settings:
   openstack/puppet-vitrage: {}
 branches:
