--- a/deliverables/queens/puppet-zaqar.yaml
+++ b/deliverables/queens/puppet-zaqar.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 7a96aa311e32fba97dcd6a738cb665a83a0cb7c0
         repo: openstack/puppet-zaqar
     version: 12.3.0
+  - projects:
+      - hash: 03d6801b65d2244d9380aab1590f5021029f84e0
+        repo: openstack/puppet-zaqar
+    version: 12.4.0
 repository-settings:
   openstack/puppet-zaqar: {}
 branches:
