nova: release queens 17.0.2
Depends-On: https://review.openstack.org/557837/

Change-Id: I54d3719d416d8f7ab61f71946ba4f3685f8dce35

--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -41,6 +41,10 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 9d8de62a07b3db7f0913a587156424074cf761c1
+  - version: 17.0.2
+    projects:
+      - repo: openstack/nova
+        hash: 307382f58d38778b480d2d030e427759a44c204b
 cycle-highlights:
   - |
     The performance of listing instances across a multi-cell cells v2
