--- a/deliverables/queens/python-openstackclient.yaml
+++ b/deliverables/queens/python-openstackclient.yaml
@@ -16,6 +16,10 @@ releases:
     projects:
       - repo: openstack/python-openstackclient
         hash: fbee4eb76285ac8fc623b15b49c1d4efd5a71fc1
+  - version: 3.14.1
+    projects:
+      - repo: openstack/python-openstackclient
+        hash: a3caf7b331709d76fc6aec5222c60688fd6112a9
 release-notes: https://docs.openstack.org/releasenotes/python-openstackclient/queens.html
 repository-settings:
   openstack/python-openstackclient: {}
