--- a/deliverables/ocata/osc-lib.yaml
+++ b/deliverables/ocata/osc-lib.yaml
@@ -17,5 +17,9 @@ releases:
     projects:
       - repo: openstack/osc-lib
         hash: 45be3e1b2c9c054823e25605d54157d36d875ba0
+  - version: 1.3.1
+    projects:
+      - hash: bffa595a5a07ecb6f861e1a1e4939b4f76386a5c
+        repo: openstack/osc-lib
 repository-settings:
   openstack/osc-lib: {}
