--- a/deliverables/ocata/cliff.yaml
+++ b/deliverables/ocata/cliff.yaml
@@ -16,5 +16,9 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: 1dd3edafab1a34d194c4510310653ad7e2cbb582
+  - version: 2.4.1
+    projects:
+      - hash: 132c948aed64c8c7154d834c004a1c0e490179bb
+        repo: openstack/cliff
 repository-settings:
   openstack/cliff: {}
