--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -128,5 +128,9 @@ releases:
       - hash: ad20979b5d0fb14e7dfe688d2c0c5019211a6903
         repo: openstack/openstackdocstheme
     version: 1.20.0
+  - projects:
+      - hash: bbc7a2a2e1792040a48f172e7dba65f6c4113506
+        repo: openstack/openstackdocstheme
+    version: 1.20.1
 repository-settings:
   openstack/openstackdocstheme: {}
