nova: release pike 16.1.1
Whole lotta bug fixes.

Change-Id: I2e3bc12e468d62868c736f9df4ae9c818a518e06

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -53,5 +53,9 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 806eda3da84d6f9b47c036ff138415458b837536
+  - version: 16.1.1
+    projects:
+      - repo: openstack/nova
+        hash: 708342fe8d6e930d7fe942fb5f2043c2907cd5e9
 repository-settings:
   openstack/nova: {}
