--- a/deliverables/ocata/kolla-ansible.yaml
+++ b/deliverables/ocata/kolla-ansible.yaml
@@ -45,5 +45,9 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: 972b89359b2c378c0e1b531cff03b90073b052bc
+  - version: 4.0.4
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: 2bc2890d243d031dc6120e80a90c8f4bc013d181
 repository-settings:
   openstack/kolla-ansible: {}
