--- a/deliverables/ocata/kolla.yaml
+++ b/deliverables/ocata/kolla.yaml
@@ -45,5 +45,9 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 4de11cec37bd2001c607b78e62b8ac7dfb952b73
+  - version: 4.0.4
+    projects:
+      - repo: openstack/kolla
+        hash: 32fc5cb2f0303f18a73aa0b52fd805d5778a1397
 repository-settings:
   openstack/kolla: {}
