Oslo releases for 2018-4-2
Change-Id: I566bcc35884ca2daf14a7d03a86d1e9a0b78fee4

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -76,5 +76,9 @@ releases:
       - hash: 1f2c7314853d254c58f3adf7f03ca80589cb6f36
         repo: openstack-dev/pbr
     version: 4.0.0
+  - projects:
+      - hash: 7b0374d680d50c67112e1220761a1a68d6606b48
+        repo: openstack-dev/pbr
+    version: 4.0.1
 repository-settings:
   openstack-dev/pbr: {}
