--- a/deliverables/rocky/oslo.cache.yaml
+++ b/deliverables/rocky/oslo.cache.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 81ca0a6a05ddd3f096340fa52534705c5554b2f6
         repo: openstack/oslo.cache
     version: 1.29.0
+  - projects:
+      - hash: 0013b9b0648b4e445ac9c44ffec1ac9b0c2a71d7
+        repo: openstack/oslo.cache
+    version: 1.30.0
