--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: e713fa9f592bc99a98b1239d5b07f1b62a885c0f
         repo: openstack/oslo.config
     version: 6.0.0
+  - projects:
+      - hash: b6cfa2905511fef1f0f179baeadde0b2a2724487
+        repo: openstack/oslo.config
+    version: 6.0.1
