--- a/deliverables/rocky/oslotest.yaml
+++ b/deliverables/rocky/oslotest.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 9460095d7dabf6c6e1faa0565cf816f4d785ac69
         repo: openstack/oslotest
     version: 3.4.0
+  - projects:
+      - hash: bb78b84c3fc8485e590f2c925c07731a9740a852
+        repo: openstack/oslotest
+    version: 3.4.1
