--- a/deliverables/rocky/python-neutronclient.yaml
+++ b/deliverables/rocky/python-neutronclient.yaml
@@ -6,3 +6,8 @@ team: neutron
 type: client-library
 repository-settings:
   openstack/python-neutronclient: {}
+releases:
+  - projects:
+      - hash: d8df387b9c058fd69f40f6bac50c81ee89abb707
+        repo: openstack/python-neutronclient
+    version: 6.8.0
