--- a/deliverables/queens/ironic.yaml
+++ b/deliverables/queens/ironic.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 46828a2a509c9836684f0c5b7f8699fbe04c32cc
         repo: openstack/ironic
     version: 10.1.1
+  - projects:
+      - hash: 039e20d8751a81061dc64d4038d18face9fad5e4
+        repo: openstack/ironic
+    version: 10.1.2
 branches:
   - location: 10.1.0
     name: stable/queens
