--- a/deliverables/queens/ironic-lib.yaml
+++ b/deliverables/queens/ironic-lib.yaml
@@ -13,6 +13,10 @@ releases:
       - hash: 831c55bf125c5b2b386fcb82d80877d511d54306
         repo: openstack/ironic-lib
     version: 2.12.0
+  - projects:
+      - hash: 04febfd5dd7a7e4f8958cd68c8c22523ec7a62af
+        repo: openstack/ironic-lib
+    version: 2.12.1
 branches:
   - name: stable/queens
     location: 2.12.0
