--- a/deliverables/queens/ironic-ui.yaml
+++ b/deliverables/queens/ironic-ui.yaml
@@ -13,6 +13,10 @@ releases:
       - hash: 1c4cbd2b90270f65d04b91ddc5f86efa35bbc622
         repo: openstack/ironic-ui
     version: 3.1.1
+  - projects:
+      - hash: 8ba23342cded6ff6bea4bb8633072c84acbf64d3
+        repo: openstack/ironic-ui
+    version: 3.1.2
 branches:
   - name: stable/queens
     location: 3.1.0
