--- a/deliverables/queens/sushy.yaml
+++ b/deliverables/queens/sushy.yaml
@@ -16,6 +16,10 @@ releases:
       - hash: 97c6bb52de79c34d168d64133397c6df3aa929da
         repo: openstack/sushy
     version: 1.3.1
+  - projects:
+      - hash: ae06c028d41f4e284745b1c14988ef267127cf77
+        repo: openstack/sushy
+    version: 1.3.2
 branches:
   - name: stable/queens
     location: 1.3.0
