--- a/deliverables/pike/ironic.yaml
+++ b/deliverables/pike/ironic.yaml
@@ -36,5 +36,9 @@ releases:
       - hash: 3b13b2b331ea1e2410ef7bbb8f3c94522884f027
         repo: openstack/ironic
     version: 9.1.3
+  - projects:
+      - hash: d556ee9cccba6c071327c4ab005ed1374f47db87
+        repo: openstack/ironic
+    version: 9.1.4
 repository-settings:
   openstack/ironic: {}
