--- a/deliverables/pike/ironic-inspector.yaml
+++ b/deliverables/pike/ironic-inspector.yaml
@@ -17,6 +17,10 @@ releases:
       - hash: c5c460eac0d27e945f4cd2cc305b47ed62b6eada
         repo: openstack/ironic-inspector
     version: 6.0.1
+  - projects:
+      - hash: 35828784d5124dfc66842a790282f9f7d03251fe
+        repo: openstack/ironic-inspector
+    version: 6.0.2
 branches:
   - location: 6.0.0
     name: stable/pike
